修改一点语法